k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-project-server-service
  namespace: service-app-dev
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: customer-project-server
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-project-server 
  namespace: service-app-dev
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: customer-project-server 
  template:
    metadata:
      labels:
        app: customer-project-server 
    spec:
      nodeSelector:
        dedicated: deamond
      volumes:
        - name: appconfig
          secret:
            secretName: customer-project-service-config
            items:
            - key: appsettings.json
              path: appsettings.json
      containers:
        - name: customer-project-server 
          image: CONTAINER_IMAGE
          imagePullPolicy: Always
          resources:
            requests:
              memory: "250M"
              cpu: "0.1"
            limits:
              memory: "500M"
              cpu: "0.2"
          volumeMounts:
          - name: appconfig
            mountPath: /app/appsettings.json
            subPath: appsettings.json
          ports:
            - name: http-port
              containerPort: 8000
              hostPort: 8000
          livenessProbe:
            httpGet:
              path: /api/HealthChecks/get
              port: 8000
              httpHeaders:
              - name: Custom-Header
                value: Awesome
            initialDelaySeconds: 60
            periodSeconds: 5
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapi-customer-project-ingress
  namespace: service-app-dev
spec:
  tls:
    - hosts:
        - webapi.appneuron.net
      secretName: webapi-tls
  rules:
    - host: webapi.appneuron.net
      http:
        paths:
          - path: /customer-project
            pathType: Prefix
            backend: 
              serviceName: customer-project-server-service
              servicePort: 8000
